# get_ontology_findings

./: .gitignore  README.md  README2.md  Taskfile.yml  main.py  pyproject.toml  ruff.toml
