[project]
name = "get-ontology-findings"
version = "0.1.0"
description = "Get imaging findings and their codes from ontologies."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "instructor>=1.7.9",
    "openai>=1.68.2",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]
